--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.5.0",
+    "@emotion/styled": "^11.3.0",
+    "@mui/material": "^5.0.6",
     "@testing-library/user-event": "^12.6.3",
     "axios": "^0.21.4",
     "prop-types": "^15.7.2",
@@ -33,7 +36,7 @@
     "production": [
       ">0.3%",
       "not ie 11",
-      "not dead", 
+      "not dead",
       "not op_mini all"
     ],
     "development": [
@@ -42,7 +45,7 @@
       "last 1 safari version",
       ">0.3%",
       "not ie 11",
-      "not dead", 
+      "not dead",
       "not op_mini all"
     ]
   },
